PokemonCards component done

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  background-image: url('https://www.gamepur.com/wp-content/uploads/2022/01/featured-pokemon-legends-arceus-what-do-space-time-distortions-do-900x506-1.jpg');
+  background-image: url('https://64.media.tumblr.com/9c0d55e5c3afd2c2da9b45284c64b2ce/8cb9f604756b4a6f-f6/s540x810/a6387dce8add90eeb0af81eed7d0611d32cec274.gif');
   background-size: cover;
   background-repeat: none;
   color: white;
