--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.formMargin {
+  margin: 20px;
+}
